# magika

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yml
dotnet/Magika.Native/: Magika.Native.csproj  MagikaNative.cs  PACKAGE.md
include/: magika_dotnet.h
src/: lib.rs
